--- a/src/modules/accounts/views/emails/forgotPassword.hbs
+++ b/src/modules/accounts/views/emails/forgotPassword.hbs
@@ -1,7 +1,25 @@
-<style>
-  .container { width: 100%; font-family: Arial, Helvetica, sans-serif; display:
-  flex; align-items: center; flex-direction: column; } span { margin: 10px }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+
+  <style>
+    .container {
+      width: 100%; font-family: Arial, Helvetica, sans-serif;
+    } 
+    
+    span {
+      margin: 10px 0;
+      display: block; 
+    }
+  </style>
+</head>
+<body>
+  
+
 
 <div class="container">
   <img src="https://i.imgur.com/oUAKMC5.png" />
@@ -20,3 +38,5 @@
 
   <h3>Equipe | <strong>Rentx</strong></h3>
 </div>
+</body>
+</html>
